--- a/app/src/main/res/layout/sign_up.xml
+++ b/app/src/main/res/layout/sign_up.xml
@@ -1,11 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<!--<android.support.v7.widget.Toolbar-->
+    <!--android:id="@+id/toolbar"-->
+    <!--xmlns:android="http://schemas.android.com/apk/res/android"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="50dp"-->
+    <!--android:orientation="vertical"-->
+    <!--android:background="@color/colorAccent">-->
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="false">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
@@ -17,37 +24,36 @@
             android:layout_width="match_parent"
             android:layout_height="30dp"
             android:layout_weight="0.5"
-            android:text="@string/oldPasswordShow" />
+            android:text="@string/email" />
 
         <EditText
-            android:id="@+id/oldPasswordInput"
+            android:id="@+id/emailInput"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="0.15"
             android:ems="10"
-            android:inputType="textPassword" />
-
+            android:inputType="textEmailAddress" />
         <TextView
-            android:id="@+id/forgotPassword"
+            android:id="@+id/name"
             android:layout_width="match_parent"
             android:layout_height="30dp"
             android:layout_weight="0.5"
-            android:text="@string/newPasswordShow" />
+            android:text="@string/name" />
 
         <EditText
-            android:id="@+id/passwordInput"
+            android:id="@+id/nameInput"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="0.15"
             android:ems="10"
-            android:inputType="textPassword" />
+            android:inputType="textEmailAddress" />
 
         <TextView
             android:id="@+id/passwordShow"
             android:layout_width="match_parent"
             android:layout_height="30dp"
             android:layout_weight="0"
-            android:text="@string/repeat_password" />
+            android:text="@string/prompt_password" />
 
         <EditText
             android:id="@+id/passwordInput"
@@ -65,10 +71,10 @@
             android:layout_marginBottom="5dp"
             android:layout_weight="0"
             android:backgroundTint="@color/colorPrimary"
-            android:onClick="savePassword"
-            android:text="@string/save" />
+            android:onClick="signUp"
+            android:text="@string/signUp" />
 
     </LinearLayout>
 </ScrollView>
-
+<!--</android.support.v7.widget.Toolbar>-->
 
