--- a/app/src/main/res/layout/sign_in.xml
+++ b/app/src/main/res/layout/sign_in.xml
@@ -1,83 +1,112 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--<android.support.v7.widget.Toolbar-->
-<!--android:id="@+id/toolbar"-->
-<!--xmlns:android="http://schemas.android.com/apk/res/android"-->
-<!--android:layout_width="match_parent"-->
-<!--android:layout_height="50dp"-->
-<!--android:orientation="vertical"-->
-<!--android:background="@color/colorAccent">-->
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?><!--<android.support.v7.widget.Toolbar--><!--android:id="@+id/toolbar"--><!--xmlns:android="http://schemas.android.com/apk/res/android"--><!--android:layout_width="match_parent"--><!--android:layout_height="50dp"--><!--android:orientation="vertical"--><!--android:background="@color/colorAccent">-->
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="false">
 
-    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:padding="20dp"
-        android:paddingTop="50dp">
+        android:layout_height="wrap_content">
 
-        <Button
-            android:id="@+id/signIn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="right"
-            android:onClick="singUp"
-            android:text="@string/signUp" />
-
-        <TextView
-            android:id="@+id/emailShow"
-            android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:layout_weight="0.5"
-            android:text="@string/email" />
-
-        <EditText
-            android:id="@+id/emailInput"
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            style="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="0.15"
-            android:ems="10"
-            android:inputType="textEmailAddress" />
+            android:background="?attr/colorAccent"
+            android:minHeight="?attr/actionBarSize">
 
-        <TextView
-            android:id="@+id/passwordShow"
-            android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:layout_weight="0.5"
-            android:text="@string/prompt_password" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/signIn"
+                android:textSize="18sp"
+                android:textAllCaps="true"
+                android:textColor="@color/white"/>
+        </android.support.v7.widget.Toolbar>
 
-        <EditText
-            android:id="@+id/passwordInput"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.15"
-            android:ems="10"
-            android:inputType="textPassword" />
-
-        <TextView
-            android:id="@+id/forgotPassword"
-            android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:layout_gravity="left"
-            android:layout_weight="0.5"
-            android:text="@string/forgotPassword" />
-
-        <Button
-            android:id="@+id/signIN"
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_below="@id/toolbar"
+            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="right"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp"
-            android:layout_weight="0"
-            android:backgroundTint="@color/colorPrimary"
-            android:onClick="signIn"
-            android:text="@string/signIn" />
+            android:layout_gravity="center"
+            android:layout_marginTop="-6dp"
+            android:indeterminate="true"
+            android:visibility="invisible"
+            />
 
-    </LinearLayout>
+        <LinearLayout
+            android:layout_below="@id/progressBar"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+           >
+
+
+            <Button
+                android:id="@+id/signIn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:onClick="singUp"
+                android:text="@string/signUp" />
+
+            <TextView
+                android:id="@+id/emailShow"
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:layout_weight="0.5"
+                android:text="@string/email" />
+
+            <EditText
+                android:id="@+id/emailInput"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.15"
+                android:ems="10"
+                android:inputType="textEmailAddress" />
+
+            <TextView
+                android:id="@+id/passwordShow"
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:layout_weight="0.5"
+                android:text="@string/prompt_password" />
+
+            <EditText
+                android:id="@+id/passwordInput"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.15"
+                android:ems="10"
+                android:inputType="textPassword" />
+
+            <TextView
+                android:id="@+id/forgotPassword"
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:layout_gravity="left"
+                android:layout_weight="0.5"
+                android:text="@string/forgotPassword" />
+
+            <Button
+                android:id="@+id/signIN"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
+                android:layout_weight="0"
+                android:backgroundTint="@color/colorPrimary"
+                android:onClick="signIn"
+                android:text="@string/signIn" />
+
+        </LinearLayout>
+    </RelativeLayout>
 </ScrollView>
-    <!--</android.support.v7.widget.Toolbar>-->
 
