--- a/app/src/main/res/layout/sign_up.xml
+++ b/app/src/main/res/layout/sign_up.xml
@@ -11,8 +11,40 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="false">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        style="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="?attr/colorAccent"
+        android:minHeight="?attr/actionBarSize">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/signUp"
+            android:textSize="18sp"
+            android:textAllCaps="true"
+            android:textColor="@color/white"/>
+    </android.support.v7.widget.Toolbar>
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_below="@id/toolbar"
+        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="-6dp"
+        android:indeterminate="true"
+        android:visibility="invisible"
+        />
     <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_below="@id/progressBar"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
@@ -75,6 +107,7 @@
             android:text="@string/signUp" />
 
     </LinearLayout>
+    </RelativeLayout>
 </ScrollView>
 <!--</android.support.v7.widget.Toolbar>-->
 
