--- a/app/src/main/res/layout/change_password.xml
+++ b/app/src/main/res/layout/change_password.xml
@@ -3,9 +3,40 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="false">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        style="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="?attr/colorAccent"
+        android:minHeight="?attr/actionBarSize">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/signIn"
+            android:textSize="18sp"
+            android:textAllCaps="true"
+            android:textColor="@color/white"/>
+    </android.support.v7.widget.Toolbar>
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_below="@id/toolbar"
+        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="-6dp"
+        android:indeterminate="true"
+        android:visibility="invisible"
+        />
+    <LinearLayout
+        android:layout_below="@id/progressBar"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
@@ -35,7 +66,7 @@
             android:text="@string/newPasswordShow" />
 
         <EditText
-            android:id="@+id/passwordInput"
+            android:id="@+id/newPasswordInput"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="0.15"
@@ -43,14 +74,14 @@
             android:inputType="textPassword" />
 
         <TextView
-            android:id="@+id/passwordShow"
+            android:id="@+id/repeatPasswordShow"
             android:layout_width="match_parent"
             android:layout_height="30dp"
             android:layout_weight="0"
             android:text="@string/repeat_password" />
 
         <EditText
-            android:id="@+id/passwordInput"
+            android:id="@+id/repeatPasswordInput"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="0.25"
@@ -69,6 +100,7 @@
             android:text="@string/save" />
 
     </LinearLayout>
+    </RelativeLayout>
 </ScrollView>
 
 
