--- a/app/src/main/res/layout/forgot_password.xml
+++ b/app/src/main/res/layout/forgot_password.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="false"
-    tools:context=".authorization.SignInActivity">
+    tools:context=".authorization.ForgotPasswordActivity">
 
     <RelativeLayout
         android:id="@+id/relativeRoot"
@@ -27,7 +27,6 @@
                 android:textSize="18sp" />
 
         </androidx.appcompat.widget.Toolbar>
-
         <ProgressBar
             android:id="@+id/progressBar"
             style="@style/Widget.AppCompat.ProgressBar.Horizontal"
@@ -38,6 +37,7 @@
             android:layout_marginTop="-6dp"
             android:indeterminate="true"
             android:visibility="invisible" />
+
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -64,25 +64,8 @@
             </com.google.android.material.textfield.TextInputLayout>
 
 
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/password_hint_text"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                android:layout_margin="10dp">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/passwordInput"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:ems="10"
-                    android:inputType="textPassword" />
-
-            </com.google.android.material.textfield.TextInputLayout>
-
             <Button
-                android:id="@+id/signIn"
+                android:id="@+id/resetPassword"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -90,35 +73,9 @@
                 android:layout_marginTop="20dp"
                 android:layout_marginEnd="20dp"
                 android:backgroundTint="@color/colorPrimary"
-                android:onClick="signIn"
+                android:onClick="sendResetEmail"
                 android:text="@string/signIn" />
 
-            <TextView
-                android:id="@+id/forgotPassword"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="end"
-                android:layout_marginStart="20dp"
-                android:text="@string/forgotPassword"
-                android:clickable="true"
-                android:focusable="true"
-                android:textColor="?attr/colorAccent" />
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@android:color/darker_gray"
-                android:layout_margin="20dp"/>
-
-            <Button
-                android:id="@+id/signUp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginStart="20dp"
-                android:layout_marginEnd="20dp"
-                android:onClick="singUp"
-                android:text="@string/signUp" />
 
 
         </LinearLayout>
