--- a/app/src/main/res/layout/customer_item.xml
+++ b/app/src/main/res/layout/customer_item.xml
@@ -12,10 +12,9 @@
         android:id="@+id/appCompatImageView2"
         android:layout_width="128dp"
         android:layout_height="match_parent"
-
         android:foregroundGravity="center"
         android:padding="0dp"
-        android:src="@drawable/ic_equipment"
+        android:src="@drawable/ic_customer"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -36,25 +35,15 @@
         tools:text="Name" />
 
     <TextView
-        android:id="@+id/price"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="@+id/amount"
-        app:layout_constraintStart_toStartOf="@+id/name"
-        tools:text="Price" />
-
-    <TextView
-        android:id="@+id/amount"
+        android:id="@+id/email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
-        android:gravity="start"
-        android:textColor="@android:color/holo_green_dark"
-        android:textSize="16sp"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/name"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/name"
         tools:text="Amount" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
