--- a/app/src/main/res/layout/fragment_create_order.xml
+++ b/app/src/main/res/layout/fragment_create_order.xml
@@ -33,26 +33,30 @@
             android:layout_weight="0"
             android:text="@string/items" />
 
-        <Spinner
-            android:id="@+id/itemsInput"
-            android:layout_width="fill_parent"
-            android:layout_height="40dp"
-            android:layout_weight="0.05" />
-
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/floatingActionButton"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
-            android:layout_marginBottom="16dp"
-            android:clickable="true"
-            android:focusable="true"
-            android:padding="0dp"
-            app:backgroundTint="@color/colorPrimary"
-            app:layout_constraintBottom_toBottomOf="@+id/customerShow"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_gravity="right"
-            app:srcCompat="@drawable/add" />
+            android:id="@+id/newSpinner">
+
+            <RelativeLayout
+                android:id="@+id/plusEquipment"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+                <Spinner
+                    android:id="@+id/equipmentInput"
+                    android:layout_width="fill_parent"
+                    android:layout_height="40dp" />
+
+                <Button
+                    android:id="@+id/addEquipment"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/equipmentInput"
+                    android:backgroundTint="@color/colorPrimary"
+                    android:text="@string/add" />
+            </RelativeLayout>
+        </LinearLayout>
 
 
         <TextView
@@ -68,6 +72,14 @@
             android:layout_width="fill_parent"
             android:layout_height="40dp"
             android:layout_weight="0.05" />
+
+        <Button
+            android:id="@+id/addCustomer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="0"
+            android:backgroundTint="@color/colorPrimary"
+            android:text="@string/add" />
 
         <TextView
             android:id="@+id/rentalDateShow"
